tests/NormalTests/paczka1/fuzzy1/24410884.err
Error in line 4: 1zLIok A991 29,0
Error in line 3: Bbh S468 72,1
Error in line 5: 1zLIok S911 94,6
Error in line 21: Bbh S468 10,4
Error in line 34: 4wTvgIlr S354 118,61
